--- a/web/themes/oc_patterns/components/_patterns/03-organisms/01-widgets/slideshow/_slideshow.scss
+++ b/web/themes/oc_patterns/components/_patterns/03-organisms/01-widgets/slideshow/_slideshow.scss
@@ -72,7 +72,12 @@
 	
 	//slider container overrides layout padding on mobile
 	.field-oc-image-multi{
-		@include widgetFull;
+		@include edgeToEdge;
+		@include calc(width, "100% + 40px");
+		@include contentStop{
+			@include edgeReset;
+			width: 100%;
+		}
 		img{
 			width: 100%;
 		}
