--- a/web/themes/oc_patterns/components/_patterns/01-atoms/05-forms/01-textfields/_textfields.scss
+++ b/web/themes/oc_patterns/components/_patterns/01-atoms/05-forms/01-textfields/_textfields.scss
@@ -3,28 +3,28 @@
 ================= */
 
 .js-form-type-textfield {
-	input{
+	input.form-text{
 		@include textInput;
 	}
 }
 .js-form-type-email{
-	input{
+	input.form-email{
 		@include textInput;
 	}
 }
 .js-form-type-password,.form-item-password{
-	input{
+	input.form-text{
 		@include textInput;
 	}
 }
-.js-form-type-tel{
+.js-form-type-tel.form-tel{
 	input{
 		@include textInput;
 		max-width: 250px;
 	}
 }
 .js-form-type-textarea{
-	textarea{
+	textarea.form-textarea{
 		@include textInput;
 	}
 }
