--- a/web/themes/oc_patterns/components/_patterns/01-atoms/05-forms/08-views-exposed-filters/_views_exposed_filters.scss
+++ b/web/themes/oc_patterns/components/_patterns/01-atoms/05-forms/08-views-exposed-filters/_views_exposed_filters.scss
@@ -10,7 +10,7 @@
 			margin-right: 1em;
 		}
 	}
-	input.form-submit{
+	input.form-submit.button{
 		background: $link;
 		color: $white;
 		&:hover,&:focus{
