--- a/web/themes/oc_patterns/components/_patterns/04-pages/search/_search.scss
+++ b/web/themes/oc_patterns/components/_patterns/04-pages/search/_search.scss
@@ -83,7 +83,7 @@
 							right: 18px;
 							&:hover,&:active,&:focus{
 								& + i{
-									@include opacity(.4);
+									opacity: .4;
 								}
 							}
 						}
