--- a/web/themes/oc_patterns/components/_patterns/05-miscellaneous/miscellaneous/_global-styles.scss
+++ b/web/themes/oc_patterns/components/_patterns/05-miscellaneous/miscellaneous/_global-styles.scss
@@ -203,7 +203,7 @@ body {
 			&:focus,&:hover {
 				background-color: $offWhite;
 				color: $black;
-				@include opacity(.8);
+				opacity: .8;
 			}
 		}
 	}// end tabs
