--- a/web/themes/oc_patterns/components/_patterns/00-base/_01-mixins.scss
+++ b/web/themes/oc_patterns/components/_patterns/00-base/_01-mixins.scss
@@ -55,20 +55,6 @@
 	@include transform(rotate3d($rotx, $roty, $rotz, #{$deg}deg));
 }
 
-//change the perspective of an element
-@mixin perspective ($perspective) {
-	@include transform(perspective(#{$perspective}));
-}
-
-// transform an element from its origin
-@mixin transformOrigin ($origin) {
-	-moz-transform-origin: $origin;
-	-o-transform-origin: $origin;
-	-ms-transform-origin: $origin;
-	-webkit-transform-origin: $origin;
-	transform-origin: $origin;
-}
-
 // use backface visiblity to smooth transitions
 @mixin backfaceVisibility($backface){
 	-webkit-backface-visiblity: $backface;
@@ -89,12 +75,6 @@
 	-o-transition: $transition-property $transition-time $method;
 	transition: $transition-property $transition-time $method;
 	backface-visibility: hidden;
-}
-
-// set opacity that will work cross browser
-@mixin opacity($opacity){
-	opacity: #{$opacity};
-	filter: Alpha(opacity=($opacity * 100));
 }
 
 // CSS columns short hand with number or columns and gutter
@@ -172,7 +152,7 @@
 	border: 1px solid $lightGrey;
 	&:hover,&:focus{
 		border-color: $darkGrey;
-		@include opacity(.7);
+		opacity: .7;
 		@include transAll(.3s);
 	}
 }
