Fade out entity_fields, remove gulp clean from package json

--- a/web/themes/oc_patterns/components/_patterns/04-pages/nodes/_layout_builder_admin.scss
+++ b/web/themes/oc_patterns/components/_patterns/04-pages/nodes/_layout_builder_admin.scss
@@ -24,3 +24,13 @@
 	}
 }//end layout builder section region
 
+//style entity block links different than normal block links in settings tray
+#drupal-off-canvas{
+	.block-categories{
+		.links{
+			a[href*="content/entity_field"]{
+				opacity: .4;
+			}
+		}
+	}
+}
