--- a/web/themes/oc_patterns/components/_patterns/02-molecules/menus/01-breadcrumbs/_breadcrumbs.scss
+++ b/web/themes/oc_patterns/components/_patterns/02-molecules/menus/01-breadcrumbs/_breadcrumbs.scss
@@ -5,9 +5,7 @@
 .breadcrumb{
 	max-width: $contentStop;
 	@include auto;
-	padding-left: 20px;
-	padding-right: 20px;
-	padding-bottom: 1em;
+	padding: 10px 20px 20px;
 	ol {
 		@include listReset;
 	}
