--- a/web/themes/oc_patterns/components/_patterns/01-atoms/08-media/_media.scss
+++ b/web/themes/oc_patterns/components/_patterns/01-atoms/08-media/_media.scss
@@ -78,11 +78,11 @@ img{
 ---------------------- */
 .media-document .file{
 	&:hover,&:focus{
-		i{
+		.fa{
 			opacity: .7;
 		}
 	}
-	i{
+	.fa{
 		margin-right: .5em;
 		color: $body;
 		font-size: 18px;
