--- a/web/themes/oc_patterns/templates/zzz-custom/media templates/entity-embed-container.html.twig
+++ b/web/themes/oc_patterns/templates/zzz-custom/media templates/entity-embed-container.html.twig
@@ -24,6 +24,6 @@
 {% else %}
 {{ attach_library('oc_patterns/media-js') }}
 <div class="oc-media {{ display }} {{ align }}">
-	<article{{ attributes }}>{{ children }}</article>
+	{{ children }}
 </div>
 {% endif %}
