User dashboard quick links adjustments

--- a/web/themes/oc_patterns/components/_patterns/04-pages/_pages.scss
+++ b/web/themes/oc_patterns/components/_patterns/04-pages/_pages.scss
@@ -113,9 +113,11 @@ article.user-dashboard{
 				@include spacer(1);
 				a{
 					width: 240px;
-					height: 75px;
+					height: 55px;
 					display: table-cell;
 					vertical-align: middle;
+					font-size: 16px;
+					padding: 0;
 				}
 			}
 		}
