--- a/web/themes/oc_patterns/components/_patterns/03-organisms/01-widgets/pullquote/_pullquote.scss
+++ b/web/themes/oc_patterns/components/_patterns/03-organisms/01-widgets/pullquote/_pullquote.scss
@@ -9,38 +9,7 @@
 	}
 	//quote text
 	.field-oc-long-text{
-		position: relative;
-		max-width: 740px;
-		font-family: $serif;
-		font-style: italic;
-		font-size: 28px;
-		padding-bottom:10px;
-		@include tab{
-			font-size: 42px;
-			padding-bottom:0;
-		}
-		//opening quotation mark
-		&:before{
-			color: $transBlack;
-			content: "“";
-			font-size: 3em;
-			line-height: 0.1em;
-			margin-right: 0.25em;
-			vertical-align: -0.4em;
-		}
-		//colsing quotation mark
-		&:after{
-			color: $transBlack;
-			content: "”";
-			font-size: 3em;
-			line-height: 0.1em;
-			margin-right: 0.25em;
-			vertical-align: -0.44em;
-		}
-		p{
-			//paragraphs must be inline to allow for before & after quotes
-			display: inline;
-		}
+		@include quote;
 	}//end long text
 
 	//source
@@ -58,4 +27,3 @@
 		}
 	}
 }//end pullquote widget
-
