--- a/web/themes/oc_patterns/components/_patterns/01-atoms/05-forms/08-views-exposed-filters/_views_exposed_filters.scss
+++ b/web/themes/oc_patterns/components/_patterns/01-atoms/05-forms/08-views-exposed-filters/_views_exposed_filters.scss
@@ -6,6 +6,7 @@
 	.form-item{
 		max-width: 250px;
 		display: inline-block;
+		vertical-align: top;
 		&:nth-last-child(n+3){
 			margin-right: 1em;
 		}
@@ -34,7 +35,7 @@
 
 /* PATTERN LAB ONLY
 ---------------------- */
-.pl{ 
+.pl{
 	.form-item-combine,.form-item-field-category-target-id{
 		max-width: 300px;
 	}
