--- a/web/themes/oc_patterns/templates/zzz-custom/fields/field--node--title--news.html.twig
+++ b/web/themes/oc_patterns/templates/zzz-custom/fields/field--node--title--news.html.twig
@@ -20,9 +20,11 @@
  */
 #}
 
-<h1{{ attributes }}>
-	{{ element.0['#context'].value }}
-</h1>
+{% extends 'field.html.twig' %}
+
+{% block fieldSingleNo %}
+<h1{{ attributes }}>{{- element.0['#context'].value -}}</h1>
 <div class="metatext">
-	<span class="date">{{ element['#object'].created.value|date("F j, Y") }}</span>
+	<span class="date">{{- element['#object'].created.value|date("F j, Y") -}}</span>
 </div>
+{% endblock %}
