--- a/web/themes/oc_patterns/templates/zzz-custom/fields/field--node--title.html.twig
+++ b/web/themes/oc_patterns/templates/zzz-custom/fields/field--node--title.html.twig
@@ -20,6 +20,8 @@
  */
 #}
 
-<div class="field field-node-title">
-	<h1>{{ element.0['#context'].value }}</h1>
-</div>
+{% extends 'field.html.twig' %}
+
+{% block fieldSingleNo %}
+	<h1{{ attributes }}>{{- element.0['#context'].value -}}</h1>
+{% endblock %}
